--- a/WebStack/index.html
+++ b/WebStack/index.html
@@ -4,6 +4,7 @@
 	<title>Web-Stack</title>
 </head>
 <body>
-
+<script type="text/javascript" src="script.js"></script>
+<script type="text/javascript" src="Stack.js"></script>
 </body>
 </html>
