--- a/WebStack/index.html
+++ b/WebStack/index.html
@@ -4,7 +4,10 @@
 	<title>Web-Stack</title>
 </head>
 <body>
-<script type="text/javascript" src="script.js"></script>
-<script type="text/javascript" src="Stack.js"></script>
+<script  type ="module" src="main.js"></script>
+<script  type ="module" src="Stack.js"></script>
+<script  type ="module" src="queue.js"></script>
+<script  type ="module" src="linkedList.js"></script>
+<script  type ="module" src="DoubleLinkedList.js"></script>
 </body>
 </html>
