--- a/WebStack/index.html
+++ b/WebStack/index.html
@@ -5,6 +5,7 @@
 	<title>Web-Stack</title>
 </head>
 <body>
+<img src="Weekly Family Meal Plans & Menu Ideas _ The Recipe Critic.jpg" width="400" height="500">
 <textarea id="orden" placeholder="Introduzca su orden"> </textarea>
 <button id="button" onclick="menu()">Menu</button>
 <button id="button" onclick="ordenes()">agregar</button>
@@ -16,7 +17,8 @@
 // Adrian Martinez 20-0772
 // Josue Limouzaine 20-0112
 
-//https://github.com/shyhotboy1/Web-Stacked Clases estan separadas motivo de bug de JavaScript con la funcion Onclick.
+//https://github.com/shyhotboy1/Web-Stacked 
+//Clases estan separadas motivo de bug de JavaScript con la funcion Onclick.
 
 class Node{
 	constructor(data, next) {
